# learn_anything

./: .envrc  .gitignore  01_Linear_Regression.ipynb  02_Classification.ipynb  04_Model_Selection.ipynb  08_MAB.ipynb  LICENSE  README.md  activate_env.sh  settings.json
Algo_DataStrucutres/: Algoritms.md  README.md  datastructures.py  faker.py  faker_dataset.py  random_names.txt  run.py  run_algo.py  test.py
ComputerVision/: CNN_imageclassification.ipynb  CNN_imageclassification_cuda.ipynb  Convolution.ipynb  LowPassFilter.ipynb  README.md  Resize.ipynb  SegNet.ipynb  SegNet_Food103.ipynb  SegNet_Panoptic.ipynb  template_matching.ipynb  vgg_tutorial.ipynb  video_classification.ipynb
Cpp/: data2train.cpp
Keras/: GAN.ipynb
LeetCode/: 1st.ipynb  Array.ipynb  List.ipynb  Progress.md  TEst.cpp
Machine Learning/: 03_Bias_Variance_Tradeoff.ipynb  06_MDP.ipynb  hello.jl  hello_julia.ipynb
Matlab/: Bode_N_Popov.asv  Bode_N_Popov.m  ifft.m  popov.m
NLP/: codegemma.ipynb
PEM_Identification/: PEM_freq_interpretation.m  Quality.md  vec.m
PINN/: mass.py
PYTHON NOTEBOOK/: XGB HYPEROPT VS XGB VS SVR PRICE REGRESSION.ipynb  lazypredict.ipynb
Python_DataScience/: 03_Bias_Variance_Tradeoff.ipynb  07_RL.ipynb  08_MAB.ipynb  1st_Dataset.ipynb  2nd_Iris_dataset_LR.ipynb  3rdLasso_Logistic_Regression.ipynb  4th_Logistic_Regression.ipynb  MalariaCells.ipynb  (+6 more)
Umar/Triton/: .gitignore  23_Conv3d_GroupNorm_Mean.cu  23_Conv3d_GroupNorm_Mean.py  CMakeLists.txt  FINAL_RESULTS.md  README.md  benchmark.py  clean.bat  clean.sh  libtorch_algorithm.cpp  run_benchmark.sh
(+230 files in other folders)
